Remove note in README about not tested on actual ARDrone

--- a/README
+++ b/README
@@ -2,8 +2,6 @@ Perl library for controlling UAVs, specifically ARDrone (maybe others in the fut
 
 http://ardrone2.parrot.com
 
-WARNING! THIS IS PRE-ALPHA CODE!
-This has not yet been tested on an actual ARDrone, since I haven't gotten one yet.  The 
-code and tests here are according to my understanding of the developer docs.  If your 
-ARDrone crashes into your neighbor's house, invades Iranian airspace, or tries to 
+WARNING! THIS IS ALPHA CODE!
+If your ARDrone crashes into your neighbor's house, invades Iranian airspace, or tries to 
 find Sarah Conner, don't blame me.
