Add note about font

--- a/README
+++ b/README
@@ -5,3 +5,9 @@ http://ardrone2.parrot.com
 WARNING! THIS IS ALPHA CODE!
 If your ARDrone crashes into your neighbor's house, invades Iranian airspace, or tries to 
 find Sarah Conner, don't blame me.
+
+
+
+Font 'Typeone' is by Nirmal Biswas:
+
+    http://www.dafont.com/nirmal-biswas.d3277
