Add note about userbox changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Version 0.4
 * Dump video to file
 * Rename anything that starts an event loop to init_event_loop()
 * Joystick to UAV control number conversion decoupled from ARDrone specifics
+* Add methods to UAV::Pilot::Control::ARDrone for userbox nav data and picture taking
 
 Version 0.3
 -----------
