--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Revision history for perl module UAV::Pilot
 
+0.8 ????
+
+- Unicast implemented for Parrot AR.Drone navdata
+
 0.7 2013-10-24
 
 - Cleanup a bunch of bad tests and dependencies from 0.6
