--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 Revision history for perl module UAV::Pilot
 
+0.10 ???
+
+- Fix regression bug of FileDump taking a filehandle
+
+0.9 2014-02-16
+
+- Breakoff parts into new dists
+
 0.8 2013-12-28
 
 - Unicast implemented for Parrot AR.Drone navdata
