Call uav_module_quit() on each loaded module when we're about to exit the REPL shell.  Bump version number to 0.10.  Also, some straglers from nav data testing.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Revision history for perl module UAV::Pilot
 0.10 ???
 
 - Fix regression bug of FileDump taking a filehandle
+- UAV::Pilot::Command calls uav_module_quit() when it's about to exit
 
 0.9 2014-02-16
 
