--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 Revision history for perl module UAV::Pilot
 
+0.11 ????
+
+- Port build to Dist::Zilla
+- Actually fix regression bug of FileDump taking a filehandle
+
 0.10 2014-04-27
 
 - Fix regression bug of FileDump taking a filehandle
