--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Revision history for perl module UAV::Pilot
 
+1.0_1 2014-06-04
+
+- Allow loading of other modules in Commands packages
+
 1.0_0 2014-06-04
 
 - No longer use share/ method of loading Command shell modules.  Instead, 
