--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 Revision history for perl module UAV::Pilot
 
+1.1 2015-06-08
+
+- Track down issues with version number
+- Bump copyright year
+
 1.0 2014-06-05
 
 - Bump version number.  Really, that's it.
