--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Revision history for perl module UAV::Pilot
 
+1.2 2015-08-22
+
+- Install exec scripts under Dist::Zilla
+
 1.1 2015-06-08
 
 - Track down issues with version number
