--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 Revision history for perl module UAV::Pilot
 
+1.3 2015-08-27
+
+- Add UAV::Pilot::Video::JPEGHandler
+
 1.2 2015-08-22
 
 - Install exec scripts under Dist::Zilla
